# Convo_Bot

./: .env.example  .gitattributes  .gitignore  .linguist-override  README.md  requirements.txt
convo_interpreter/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  main.py  pyproject.toml  release.py  requirements-discord.txt  setup.py
convo_interpreter/.github/: FUNDING.yml  LINGUIST_SUBMISSION.md  PULL_REQUEST_TEMPLATE.md  TOPICS.md  copilot-instructions.md  linguist-override.yml  linguist.yml
convo_interpreter/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_feature.md
convo_interpreter/.github/workflows/: ci-tests-new.yml  release.yml
convo_interpreter/convo/: __init__.py  __main__.py  ast_nodes.py  builtins.py  interpreter.py  lexer.py  parser.py
convo_interpreter/convo/modules/: __init__.py  discord_advanced.py  (+3 more)
convo_interpreter/docs/: ENHANCEMENT_SUMMARY.md  PYTHON_VS_CONVO_COMPARISON.md  README.md
convo_interpreter/examples/: README.md  banking_demo.convo  classes_and_objects.convo  control_flow.convo  dictionaries_demo.convo  discord_bot_advanced.convo  discord_bot_basic.convo  discord_bot_modern.convo  discord_bot_ui_complete.convo  discord_moderation_bot.convo  discord_security_guide.convo  discord_setup_guide.convo  discord_slash_commands_guide.convo  discord_ui_complete_guide.convo  enhanced_demo.convo  error_handling.convo  file_operations.convo  functions.convo  game_demo.convo  grade_calculator.convo  hello_world.convo  lists_demo.convo  variables.convo  weather_app.convo
convo_interpreter/tests/: test_ast_structure.py  test_discord_integration.py  test_discord_ui.py  test_enhanced_features.py  test_import.convo  test_import_system.py  test_interpreter.py  test_lexer.py  test_parser.py  test_phase1_step3.py  test_phase2_step1.py  test_phase2_step2.py  test_slash_commands.py
(+13 files in other folders)
